# ts-dashboard

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  poetry.toml  pyproject.toml
notebooks/: FetchData.ipynb
scripts/: fetch_btc_data.py
src/ts_dashboard/: __init__.py  crud.py  db.py  main.py
src/ts_dashboard/scripts/: fetch_btc_data.py
src/ts_dashboard/static/: plotly.min.js:Zone.Identifier
src/ts_dashboard/templates/: index.html
