[project]
name = "ts-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Melih",email = "karamel.itu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "ts_dashboard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
